--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
             <div class="pos-main">
                 <div class="favorites-column">
                     <h3>Favoritos</h3>
-                    <div class="favorites-list" id="favoritesList"></div>
+                    <ul class="favorites-list" id="favoritesList" style="list-style:none;padding:0;margin:0;display:flex;flex-direction:column;gap:12px;">
+                        <!-- Los favoritos se insertarán aquí como elementos <li> -->
+                    </ul>
                 </div>
 
                 <div class="center-grid">
